<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/guideline14Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline00Horz" />

    <TextView
        android:id="@+id/tvMake"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/make"
        app:layout_constraintBottom_toTopOf="@+id/guideline28Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline14Horz" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/model"
        app:layout_constraintBottom_toTopOf="@+id/guideline42Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline28Horz" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/color"
        app:layout_constraintBottom_toTopOf="@+id/guideline56Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline42Horz" />

    <TextView
        android:id="@+id/tvEngine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/engine"
        app:layout_constraintBottom_toTopOf="@+id/guideline70Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline56Horz" />

    <TextView
        android:id="@+id/tvTransmissionType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/transmission_type"
        app:layout_constraintBottom_toTopOf="@+id/guideline84Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline70Horz" />

    <TextView
        android:id="@+id/tvTitleStatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="@string/title_status"
        app:layout_constraintBottom_toTopOf="@+id/guideline98Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline50Vert"
        app:layout_constraintStart_toStartOf="@+id/guideline00Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline84Horz" />

    <Button
        android:id="@+id/btnParc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:text="@string/parcelable"
        app:layout_constraintBottom_toTopOf="@+id/guideline42Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline100Vert"
        app:layout_constraintStart_toEndOf="@+id/guideline50Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline28Horz"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnBund"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:text="@string/Bundle"
        app:layout_constraintBottom_toTopOf="@+id/guideline56Horz"
        app:layout_constraintEnd_toStartOf="@+id/guideline100Vert"
        app:layout_constraintStart_toEndOf="@+id/guideline50Vert"
        app:layout_constraintTop_toTopOf="@+id/guideline42Horz"
        android:onClick="onClick" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline00Vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline50Vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline100Vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline00Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline28Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline42Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline56Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline70Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline84Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline98Horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

</android.support.constraint.ConstraintLayout>